--- a/SIG_kajianislam/app/src/main/res/menu/menu_main_user.xml
+++ b/SIG_kajianislam/app/src/main/res/menu/menu_main_user.xml
@@ -8,12 +8,18 @@
         android:orderInCategory="100"
         android:title="@string/tambahkajian"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/Mykajian"
+        android:orderInCategory="100"
+        android:title="@string/kajiansaya"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/Cari"
         android:orderInCategory="100"
         android:title="@string/carikajian"
         app:showAsAction="never" />
+
 
     <item
         android:id="@+id/Logout"
